# Metadata_Cleaner

./: .gitignore  LICENSE  README.md  README_EN.md  build.py  installer_linux.sh  installer_windows.nsi  pyproject.toml  requirements.txt  run.py
.github/workflows/: code-quality.yml  dependency-check.yml  python-app.yml  quick-check.yml  release.yml  tests.yml
assets/icons/: icon.icns
docs/: LICENSE_INSTALLER.txt  LINUX_INSTALL.md  PRIVACY_POLICY_EN.md  PRIVACY_POLICY_RU.md  RELEASE_TEMPLATE.md  TERMS_OF_SERVICE_EN.md  TERMS_OF_SERVICE_RU.md
examples/: basic_usage.py
metadata_cleaner/: __init__.py  cli.py  version.py
metadata_cleaner/cleaner/: __init__.py  dispatcher.py  errors.py  models.py
metadata_cleaner/cleaner/handlers/: __init__.py  image.py  office.py  pdf.py  video.py
metadata_cleaner/gui/: __init__.py  app.py  localization.py
metadata_cleaner/gui/components/: __init__.py  action_bar.py  detailed_results_dialog.py  file_card.py  progress_card.py  settings_dialog.py  stats_panel.py
metadata_cleaner/services/: __init__.py  settings_service.py
tests/: __init__.py  test_dispatcher.py  test_dispatcher_advanced.py  test_errors.py  test_handlers.py  test_models.py  test_settings_service.py
tests/test_files/: test_presentation.pptx  test_spreadsheet.xlsx  test_video.mov
